# LOAIZ

./: README.md
Curs_Work/: curswork (1).docx  curswork (2).docx
Curs_Work/labirint/: CMakeLists.txt  labirint.qmlproject  main.qml  qmlmodules  res.qrc
Curs_Work/labirint/imports/: CMakeLists.txt
Curs_Work/labirint/imports/labirint/: CMakeLists.txt  qmldir
Curs_Work/labirint/imports/labirint/designer/: plugin.metainfo
Curs_Work/labirint/qml_others/: Game_agent_win.qml  Information.qml  Me_win.qml
Curs_Work/labirint/src/: Logic_of_the_maze.cpp  Logic_of_the_maze.h  import_qml_plugins.h  main.cpp
Curs_Work/temp_code/: 12312.txt  777.txt  888.txt  99999.txt
lab1/: Source.cpp
lab1/Project1/: Project1.sln  Project1.vcxproj  Source  Source.cpp
lab10/: 123.txt  sourse  sourse.cpp
lab10/Project1/: Project1.sln  Project1.vcxproj  Project1.vcxproj.filters
lab2/: #include <stdio.cpp  .~lock.link to the charts in yandex.disk.odt#  link to the charts in yandex.disk.odt  link to the charts.txt  sourse  sourse.cpp
lab2/Project1/: Project1.sln  Project1.vcxproj  Source  Source.cpp  info.txt
lab3/: Untitled-1  Untitled-1.cpp
lab3/Project1/: Project1.sln  Project1.vcxproj  Source  Source.cpp
lab4/: sourse  sourse.cpp
lab4/ConsoleApplication1/: ConsoleApplication1.cpp  ConsoleApplication1.sln  ConsoleApplication1.vcxproj
lab4/Project1/: Project1.sln  Project1.vcxproj
lab5/: #inlude <iostream>  sourse  sourse.cpp
lab5/Project1/: Project1.sln  Project1.vcxproj  sourse  sourse.cpp
lab6/: Untitled-1  Untitled-1.cpp  sourse  sourse.cpp
lab6/Project1/: Project1.sln  Project1.vcxproj
lab7/: 123.txt
lab7/Project1/: Project1.sln  Project1.vcxproj  Source  Source.cpp
lab8/: Source  Source.cpp
lab9/: sourse  sourse.cpp
(+127 files in other folders)
